--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,6 @@
     <string name="target_value_text">67</string>
     <string name="hit_me_button">HIT ME</string>
     <string name="result_dialog_title">Hello there!</string>
-    <string name="result_dialog_message">This is my first pop-up</string>
-    <string name="hit_me_button_text">Hit me</string>
+    <string name="result_dialog_message">The slider\'s value is %1$d.\nYou scored %2$d points this round</string>
+    <string name="result_dialog_button_text">Awesome</string>
 </resources>
